# gato.py

./: README.md  pyproject.toml
gato_compiler/: __main__.py  parser.py  source.py
tests/: test_parser.py
